# dictype

./: Cargo.toml
DictypeFcitx/: CMakeLists.txt
DictypeFcitx/src/: DictypeState.cpp  DictypeState.test.cpp
crates/dictyped/src/: service.rs
crates/pcm-playback-recorder/src/: lib.rs
crates/qwen-v3-client/src/: client.rs
